// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecord ChildIdentifiers matches snapshot - no unique id 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 06/21/2008
      </span>
      <div>
        <div
          class="bx--form-item"
        >
          <div
            class="bx--date-picker bx--date-picker--simple"
            id="dateOfBirth-picker-picker"
          >
            <div
              class="bx--date-picker-container"
            >
              <label
                class="bx--label bx--visually-hidden"
                for="dateOfBirth-picker-input"
              >
                Date picker
              </label>
              <div
                class="bx--date-picker-input__wrapper"
              >
                <input
                  class="bx--date-picker__input"
                  id="dateOfBirth-picker-input"
                  pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <button
      class="usa-button bx--btn bx--btn--primary"
      tabindex="0"
      type="submit"
    >
      Save
    </button>
  </form>
</DocumentFragment>
`;

exports[`EditRecord ChildIdentifiers matches snapshot - other unique id 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-12"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="unique-id"
        >
          Unique Id 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="unique-id"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 06/21/2008
      </span>
      <div>
        <div
          class="bx--form-item"
        >
          <div
            class="bx--date-picker bx--date-picker--simple"
            id="dateOfBirth-picker-picker"
          >
            <div
              class="bx--date-picker-container"
            >
              <label
                class="bx--label bx--visually-hidden"
                for="dateOfBirth-picker-input"
              >
                Date picker
              </label>
              <div
                class="bx--date-picker-input__wrapper"
              >
                <input
                  class="bx--date-picker__input"
                  id="dateOfBirth-picker-input"
                  pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <button
      class="usa-button bx--btn bx--btn--primary"
      tabindex="0"
      type="submit"
    >
      Save
    </button>
  </form>
</DocumentFragment>
`;

exports[`EditRecord ChildIdentifiers matches snapshot - sasid 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="usa-form ChildIdentifiersForm usa-form"
    novalidate=""
  >
    <h2>
      Child's identifiers
    </h2>
    <div
      class="mobile-lg:grid-col-12"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="sasid"
        >
          SASID 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="sasid"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="firstName"
        >
          First name 
        </label>
        <input
          aria-required="true"
          class="usa-input oec-text-input"
          id="firstName"
          type="text"
          value="First"
        />
      </div>
    </div>
    <div
      class="mobile-lg:grid-col-9"
    >
      <div
        class=" usa-form-group"
      >
        <label
          class="usa-label"
          for="middleName"
        >
          Middle name 
          <span
            class="usa-hint"
          >
             (optional)
          </span>
        </label>
        <input
          aria-required="false"
          class="usa-input oec-text-input"
          id="middleName"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="display-flex flex-row flex-align-end grid-row grid-gap"
    >
      <div
        class="mobile-lg:grid-col-9"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="lastName"
          >
            Last name 
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="lastName"
            type="text"
            value="Last"
          />
        </div>
      </div>
      <div
        class="mobile-lg:grid-col-3"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="suffix"
          >
            Suffix 
            <span
              class="usa-hint"
            >
               (optional)
            </span>
          </label>
          <input
            aria-required="false"
            class="usa-input oec-text-input"
            id="suffix"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <fieldset
      aria-labelledby="fieldset-legend-dateOfBirth-picker dateOfBirth-picker-hint"
      class="usa-fieldset"
      id="dateOfBirth-picker"
    >
      <legend
        id="fieldset-legend-dateOfBirth-picker"
      >
        <span
          class="usa-label"
        >
          Birthdate
        </span>
      </legend>
      <span
        class="usa-hint text-italic"
        id="dateOfBirth-picker-hint"
      >
        For example: 06/21/2008
      </span>
      <div>
        <div
          class="bx--form-item"
        >
          <div
            class="bx--date-picker bx--date-picker--simple"
            id="dateOfBirth-picker-picker"
          >
            <div
              class="bx--date-picker-container"
            >
              <label
                class="bx--label bx--visually-hidden"
                for="dateOfBirth-picker-input"
              >
                Date picker
              </label>
              <div
                class="bx--date-picker-input__wrapper"
              >
                <input
                  class="bx--date-picker__input"
                  id="dateOfBirth-picker-input"
                  pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                  placeholder="mm/dd/yyyy"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      aria-labelledby="fieldset-legend-birth-certificate-fields"
      class="usa-fieldset"
      id="birth-certificate-fields"
    >
      <legend
        id="fieldset-legend-birth-certificate-fields"
      >
        <span
          class="usa-label"
        >
          Birth certificate
        </span>
      </legend>
      <div>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="US-birth-certificate"
            >
              US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Non-US-birth-certificate"
              name="birthCertificateType"
              type="radio"
              value="Non-US birth certificate"
            />
            <label
              class="usa-radio__label"
              for="Non-US-birth-certificate"
            >
              Non-US birth certificate
            </label>
          </div>
        </span>
        <span>
          <div
            class="usa-radio"
          >
            <input
              class="usa-radio__input"
              id="Unavailable"
              name="birthCertificateType"
              type="radio"
              value="Unavailable"
            />
            <label
              class="usa-radio__label"
              for="Unavailable"
            >
              Unavailable
            </label>
          </div>
        </span>
      </div>
    </fieldset>
    <button
      class="usa-button bx--btn bx--btn--primary"
      tabindex="0"
      type="submit"
    >
      Save
    </button>
  </form>
</DocumentFragment>
`;
